# smart-doc-extractor

./: .gitignore  LICENSE  README.md  config.py  demo_server.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py
src/api/: __init__.py  schemas.py  server.py
src/api/static/: index.html
src/detection/: __init__.py  region_classifier.py  text_detector.py
src/extraction/: __init__.py  field_extractor.py  field_types.py
src/pipeline/: __init__.py  extractor.py
src/preprocessing/: __init__.py  image_enhancer.py  layout_analyzer.py
src/recognition/: __init__.py  ocr_engine.py  text_postprocess.py
src/utils/: image_utils.py  logger.py  text_utils.py
src/visualization/: result_viewer.py
templates/: invoice.json  receipt.json
tests/: test_smoke.py
